# uart_mqtt_bridge_component

./: CMakeLists.txt  README.md  sdkconfig
components/mqtt_comm/: CMakeLists.txt  mqtt_comm.c
components/mqtt_comm/include/: mqtt_comm.h
components/uart_comm/: CMakeLists.txt  uart_comm.c
components/uart_comm/include/: uart_comm.h
components/wifi_conn/: CMakeLists.txt  wifi_conn.c
components/wifi_conn/include/: wifi_conn.h
main/: CMakeLists.txt  common_defs.h  led_handler.c  led_handler.h  main.c
